Fixed collapsed margin

--- a/_less/seiso.less
+++ b/_less/seiso.less
@@ -25,7 +25,6 @@ body {
 }
 
 .page-header {
-  margin-top: 0;
   border-bottom: none;
   
   .lead {
